--- a/results.ipynb
+++ b/results.ipynb
@@ -31,8 +31,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 14:31:54,604; src.utils; INFO; Root logger is set up\n",
-      "2021-02-14 14:31:54,616; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n"
+      "2021-02-14 16:04:54,539; src.utils; INFO; Root logger is set up\n",
+      "2021-02-14 16:04:54,551; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n"
      ]
     }
    ],
@@ -40,7 +40,8 @@
     "set_root_logger()\n",
     "train_ds = Dataset(\n",
     "    df_path='/home/kevinsuedmersen/dev/titanic/data/train.csv',\n",
-    "    ground_truth='Survived'\n",
+    "    ground_truth='Survived',\n",
+    "    id_col='PassengerId'\n",
     ")"
    ]
   },
@@ -69,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 14:31:54,638; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n"
+      "2021-02-14 16:04:54,563; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n"
      ]
     }
    ],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "young-greenhouse",
    "metadata": {},
    "outputs": [
@@ -114,7 +115,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 14:32:04,451; src.preprocessing; INFO; Preprocessing was already conducted\n"
+      "2021-02-14 16:04:54,605; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-14 16:04:54,614; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-14 16:04:54,621; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-14 16:04:54,629; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-14 16:04:54,633; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-14 16:04:54,634; src.preprocessing; INFO; Preprocessing finished\n"
      ]
     },
     {
@@ -143,6 +149,8 @@
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>PassengerId</th>\n",
        "      <th>Sex_female</th>\n",
        "      <th>Sex_male</th>\n",
        "      <th>Embarked_C</th>\n",
@@ -161,6 +169,8 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -171,6 +181,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -185,6 +197,8 @@
        "      <td>0</td>\n",
        "      <td>7.9250</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -197,6 +211,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -211,6 +227,8 @@
        "      <td>0</td>\n",
        "      <td>8.0500</td>\n",
        "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -218,6 +236,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -237,6 +257,8 @@
        "      <td>0</td>\n",
        "      <td>13.0000</td>\n",
        "      <td>0</td>\n",
+       "      <td>887</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -250,6 +272,8 @@
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>1</td>\n",
+       "      <td>888</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -262,6 +286,8 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>23.4500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>889</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -275,6 +301,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>890</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -289,6 +317,8 @@
        "      <td>0</td>\n",
        "      <td>7.7500</td>\n",
        "      <td>0</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -296,37 +326,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 10 columns</p>\n",
+       "<p>891 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Pclass   Age  SibSp  Parch     Fare  Sex_female  Sex_male  Embarked_C  \\\n",
-       "0         1  22.0      1      0   7.2500           0         1           0   \n",
-       "1         3  38.0      1      0  71.2833           1         0           1   \n",
-       "2         1  26.0      0      0   7.9250           1         0           0   \n",
-       "3         3  35.0      1      0  53.1000           1         0           0   \n",
-       "4         1  35.0      0      0   8.0500           0         1           0   \n",
-       "..      ...   ...    ...    ...      ...         ...       ...         ...   \n",
-       "886       2  27.0      0      0  13.0000           0         1           0   \n",
-       "887       3  19.0      0      0  30.0000           1         0           0   \n",
-       "888       1  28.0      1      2  23.4500           1         0           0   \n",
-       "889       3  26.0      0      0  30.0000           0         1           1   \n",
-       "890       1  32.0      0      0   7.7500           0         1           0   \n",
+       "     Pclass   Age  SibSp  Parch     Fare  Survived  PassengerId  Sex_female  \\\n",
+       "0         1  22.0      1      0   7.2500         0            1           0   \n",
+       "1         3  38.0      1      0  71.2833         1            2           1   \n",
+       "2         1  26.0      0      0   7.9250         1            3           1   \n",
+       "3         3  35.0      1      0  53.1000         1            4           1   \n",
+       "4         1  35.0      0      0   8.0500         0            5           0   \n",
+       "..      ...   ...    ...    ...      ...       ...          ...         ...   \n",
+       "886       2  27.0      0      0  13.0000         0          887           0   \n",
+       "887       3  19.0      0      0  30.0000         1          888           1   \n",
+       "888       1  28.0      1      2  23.4500         0          889           1   \n",
+       "889       3  26.0      0      0  30.0000         1          890           0   \n",
+       "890       1  32.0      0      0   7.7500         0          891           0   \n",
        "\n",
-       "     Embarked_Q  Embarked_S  \n",
-       "0             0           1  \n",
-       "1             0           0  \n",
-       "2             0           1  \n",
-       "3             0           1  \n",
-       "4             0           1  \n",
-       "..          ...         ...  \n",
-       "886           0           1  \n",
-       "887           0           1  \n",
-       "888           0           1  \n",
-       "889           0           0  \n",
-       "890           1           0  \n",
+       "     Sex_male  Embarked_C  Embarked_Q  Embarked_S  \n",
+       "0           1           0           0           1  \n",
+       "1           0           1           0           0  \n",
+       "2           0           0           0           1  \n",
+       "3           0           0           0           1  \n",
+       "4           1           0           0           1  \n",
+       "..        ...         ...         ...         ...  \n",
+       "886         1           0           0           1  \n",
+       "887         0           0           0           1  \n",
+       "888         0           0           0           1  \n",
+       "889         1           1           0           0  \n",
+       "890         1           0           1           0  \n",
        "\n",
-       "[891 rows x 10 columns]"
+       "[891 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -338,21 +368,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   Pclass      891 non-null    int64  \n",
-      " 1   Age         891 non-null    float64\n",
-      " 2   SibSp       891 non-null    int64  \n",
-      " 3   Parch       891 non-null    int64  \n",
-      " 4   Fare        891 non-null    float64\n",
-      " 5   Sex_female  891 non-null    uint8  \n",
-      " 6   Sex_male    891 non-null    uint8  \n",
-      " 7   Embarked_C  891 non-null    uint8  \n",
-      " 8   Embarked_Q  891 non-null    uint8  \n",
-      " 9   Embarked_S  891 non-null    uint8  \n",
-      "dtypes: float64(2), int64(3), uint8(5)\n",
-      "memory usage: 39.3 KB\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   Pclass       891 non-null    int64  \n",
+      " 1   Age          891 non-null    float64\n",
+      " 2   SibSp        891 non-null    int64  \n",
+      " 3   Parch        891 non-null    int64  \n",
+      " 4   Fare         891 non-null    float64\n",
+      " 5   Survived     891 non-null    int64  \n",
+      " 6   PassengerId  891 non-null    int64  \n",
+      " 7   Sex_female   891 non-null    uint8  \n",
+      " 8   Sex_male     891 non-null    uint8  \n",
+      " 9   Embarked_C   891 non-null    uint8  \n",
+      " 10  Embarked_Q   891 non-null    uint8  \n",
+      " 11  Embarked_S   891 non-null    uint8  \n",
+      "dtypes: float64(2), int64(5), uint8(5)\n",
+      "memory usage: 53.2 KB\n",
       "None\n"
      ]
     }
@@ -377,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "white-block",
+   "id": "empty-primary",
    "metadata": {},
    "outputs": [
     {
