Made sure train and test datasets don't have missing values

--- a/results.ipynb
+++ b/results.ipynb
@@ -22,30 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "inner-following",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-14 16:04:54,539; src.utils; INFO; Root logger is set up\n",
-      "2021-02-14 16:04:54,551; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n"
-     ]
-    }
-   ],
-   "source": [
-    "set_root_logger()\n",
-    "train_ds = Dataset(\n",
-    "    df_path='/home/kevinsuedmersen/dev/titanic/data/train.csv',\n",
-    "    ground_truth='Survived',\n",
-    "    id_col='PassengerId'\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "affiliated-chapel",
    "metadata": {},
@@ -60,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "voluntary-promise",
    "metadata": {
     "scrolled": false
@@ -70,12 +46,161 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 16:04:54,563; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n"
+      "2021-02-14 18:19:11,571; src.utils; INFO; Root logger is set up\n",
+      "2021-02-14 18:19:11,571; src.utils; INFO; Root logger is set up\n",
+      "2021-02-14 18:19:11,584; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-14 18:19:11,584; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-14 18:19:12,830; src.preprocessing; INFO; Generating the profiling report\n",
+      "2021-02-14 18:19:12,830; src.preprocessing; INFO; Generating the profiling report\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "469d8d2fd7644102bd678d9f4dbc283b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/25 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bfcb8a108e30415db63a38c4f576e5bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e12452871deb46e3854f540f089301bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a18df8986f114e6bb7c9e1ded7832f41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-14 18:19:25,830; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/train_ds_profiling.html``\n",
+      "2021-02-14 18:19:25,830; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/train_ds_profiling.html``\n",
+      "2021-02-14 18:19:25,843; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-14 18:19:25,843; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-14 18:19:25,845; src.preprocessing; INFO; Generating the profiling report\n",
+      "2021-02-14 18:19:25,845; src.preprocessing; INFO; Generating the profiling report\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1c06340a154470bb36d705194368642",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd7af7950ffc446d90085bf96a03f772",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a49a9950227845689742a90dd81065fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4839ad0efa0244cb901294c2cbd7ff82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-14 18:19:35,332; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/test_ds_profiling.html``\n",
+      "2021-02-14 18:19:35,332; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/test_ds_profiling.html``\n"
      ]
     }
    ],
    "source": [
-    "train_ds.profile(html_path='results/train_ds_profiling.html')"
+    "set_root_logger()\n",
+    "train_ds = Dataset(\n",
+    "    df_path='/home/kevinsuedmersen/dev/titanic/data/train.csv',\n",
+    "    ground_truth='Survived',\n",
+    "    id_col='PassengerId'\n",
+    ")\n",
+    "train_ds.profile(title='train_ds_profile', html_path='results/train_ds_profiling.html')\n",
+    "test_ds = Dataset(\n",
+    "    df_path='/home/kevinsuedmersen/dev/titanic/data/test.csv',\n",
+    "    ground_truth=None,\n",
+    "    id_col='PassengerId'\n",
+    ")\n",
+    "test_ds.profile(title='test_ds_profile', html_path='results/test_ds_profiling.html')"
    ]
   },
   {
@@ -88,7 +213,8 @@
     "- Lots of missing values in `Age` and distribution looks skewed with some outliers. ==> Fill with median, because in skewed distributions, the median might be better representation of a \"common\" value \n",
     "- Survival might depend on gender, because woman and children were supposed to board the emergency boats first\n",
     "- Extract some more information from `Ticket`, such as sections, floors, etc. Passengers from lower decks might have lower survival chances, because lower decks could have been flooded first\n",
-    "- 77.1% missing values in `Cabin` ==> Either ignore that column completely, or fill with mode\n",
+    "- 0.2% Missing values of `Fare` in the test dataset ==> Fill with median, because its distribution is highly skewed \n",
+    "- more than 75% missing values in `Cabin` ==> Either ignore that column completely, or fill with mode\n",
     "- Few missing values in `Embarked`. ==> Fill with mode"
    ]
   },
@@ -107,22 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "young-greenhouse",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-14 16:04:54,605; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
-      "2021-02-14 16:04:54,614; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-14 16:04:54,621; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-14 16:04:54,629; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-14 16:04:54,633; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-14 16:04:54,634; src.preprocessing; INFO; Preprocessing finished\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -408,8 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "empty-primary",
+   "execution_count": 4,
+   "id": "healthy-signal",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +532,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
