put results of first run in notebook

--- a/results.ipynb
+++ b/results.ipynb
@@ -14,11 +14,24 @@
    "execution_count": 1,
    "id": "overall-silicon",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-14 19:16:43,432; src.utils; INFO; Root logger is set up\n"
+     ]
+    }
+   ],
    "source": [
+    "import logging\n",
     "from src.preprocessing import Dataset\n",
+    "from src.training import Model\n",
     "from src.utils import set_root_logger\n",
-    "from IPython.display import display, HTML"
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "set_root_logger()"
    ]
   },
   {
@@ -36,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "voluntary-promise",
    "metadata": {
     "scrolled": false
@@ -46,149 +59,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 18:19:11,571; src.utils; INFO; Root logger is set up\n",
-      "2021-02-14 18:19:11,571; src.utils; INFO; Root logger is set up\n",
-      "2021-02-14 18:19:11,584; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
-      "2021-02-14 18:19:11,584; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
-      "2021-02-14 18:19:12,830; src.preprocessing; INFO; Generating the profiling report\n",
-      "2021-02-14 18:19:12,830; src.preprocessing; INFO; Generating the profiling report\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "469d8d2fd7644102bd678d9f4dbc283b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/25 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfcb8a108e30415db63a38c4f576e5bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e12452871deb46e3854f540f089301bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a18df8986f114e6bb7c9e1ded7832f41",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-14 18:19:25,830; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/train_ds_profiling.html``\n",
-      "2021-02-14 18:19:25,830; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/train_ds_profiling.html``\n",
-      "2021-02-14 18:19:25,843; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
-      "2021-02-14 18:19:25,843; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
-      "2021-02-14 18:19:25,845; src.preprocessing; INFO; Generating the profiling report\n",
-      "2021-02-14 18:19:25,845; src.preprocessing; INFO; Generating the profiling report\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1c06340a154470bb36d705194368642",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/24 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd7af7950ffc446d90085bf96a03f772",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a49a9950227845689742a90dd81065fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4839ad0efa0244cb901294c2cbd7ff82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-14 18:19:35,332; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/test_ds_profiling.html``\n",
-      "2021-02-14 18:19:35,332; src.preprocessing; INFO; Saved the pandas-profiling report to ``results/test_ds_profiling.html``\n"
+      "2021-02-14 19:16:43,458; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-14 19:16:43,463; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
+      "2021-02-14 19:16:43,476; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-14 19:16:43,479; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
      ]
     }
    ],
    "source": [
-    "set_root_logger()\n",
     "train_ds = Dataset(\n",
     "    df_path='/home/kevinsuedmersen/dev/titanic/data/train.csv',\n",
     "    ground_truth='Survived',\n",
@@ -228,7 +106,8 @@
     "- Fill `Embarked` with mode\n",
     "- Label-encode `Pclass` such that class 1 (for the rich and famous people) has the highest value and class 3 (for working class people) has the lowest value\n",
     "- One-hot encode the following categorical variables: `Sex, Embarked`\n",
-    "- Only use the following predictors: `Pclass, Sex, Age, SibSp, Parch, Fare, Embarked`"
+    "- Only use the following predictors: `Pclass, Sex, Age, SibSp, Parch, Fare, Embarked`\n",
+    "- Use SVM with default parameters"
    ]
   },
   {
@@ -237,6 +116,26 @@
    "id": "young-greenhouse",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-14 19:16:43,510; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-14 19:16:43,519; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-14 19:16:43,529; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-14 19:16:43,535; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-14 19:16:43,566; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-14 19:16:43,580; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-14 19:16:43,583; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-14 19:16:43,597; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
+      "2021-02-14 19:16:43,601; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-14 19:16:43,610; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-14 19:16:43,619; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-14 19:16:43,643; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-14 19:16:43,652; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-14 19:16:43,656; src.preprocessing; INFO; Preprocessing finished\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -504,18 +403,20 @@
     }
    ],
    "source": [
-    "# Preprocessing configuration\n",
+    "# Preprocessing\n",
     "predictors = ['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked']\n",
     "col_name_to_fill_method = {\n",
     "    'Age': 'median', \n",
-    "    'Embarked': 'mode'\n",
+    "    'Embarked': 'mode',\n",
+    "    'Fare': 'median'\n",
     "}\n",
     "col_name_to_encoding = {\n",
     "    'Pclass': {1: 3, 2: 2, 3: 1}, # original_value: encoding_value\n",
     "    'Sex': 'one_hot',\n",
     "    'Embarked': 'one_hot'\n",
     "}\n",
-    "train_ds.preprocess_df_iteration_1(col_name_to_fill_method, col_name_to_encoding, predictors)\n",
+    "train_ds.preprocess(col_name_to_fill_method, col_name_to_encoding, predictors)\n",
+    "test_ds.preprocess(col_name_to_fill_method, col_name_to_encoding, predictors)\n",
     "display(train_ds.df)\n",
     "print(train_ds.df.info())"
    ]
@@ -527,18 +428,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-14 19:16:43,732; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-14 19:16:43,741; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-14 19:16:43,766; src.training; INFO; Training finished\n",
+      "2021-02-14 19:16:43,782; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
+      "2021-02-14 19:16:43,785; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-14 19:16:43,792; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-14 19:16:43,796; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-14 19:16:43,818; src.training; INFO; Saved submission to ``results/submission.csv``\n"
+     ]
     }
    ],
    "source": [
-    "train_ds.preprocessing_finished"
+    "# Training\n",
+    "model = Model(\n",
+    "    model_name='svm',\n",
+    "    model_path='results/svm_model.pickle', \n",
+    "    ground_truth='Survived', \n",
+    "    id_col_name='PassengerId',\n",
+    "    scaling_mode='min_max',\n",
+    "    scaler_path='results/min_max_scaler.pickle',\n",
+    "    kernel='rbf'\n",
+    ")\n",
+    "model.train_and_evaluate(train_ds.df)\n",
+    "model.gen_submission_file(test_ds.df, submission_path='results/submission.csv')"
    ]
   },
   {
