started to add some more advanced preprocessing

--- a/results.ipynb
+++ b/results.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:10:54,765; src.utils; INFO; Root logger is set up\n"
+      "2021-02-14 20:58:16,577; src.utils; INFO; Root logger is set up\n"
      ]
     }
    ],
@@ -59,10 +59,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:10:54,780; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
-      "2021-02-14 20:10:54,781; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
-      "2021-02-14 20:10:54,792; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
-      "2021-02-14 20:10:54,795; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
+      "2021-02-14 20:58:16,596; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-14 20:58:16,598; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
+      "2021-02-14 20:58:16,611; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-14 20:58:16,614; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
      ]
     }
    ],
@@ -112,20 +112,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:10:54,820; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
-      "2021-02-14 20:10:54,836; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-14 20:10:54,846; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-14 20:10:54,854; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-14 20:10:54,868; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-14 20:10:54,887; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-14 20:10:54,890; src.preprocessing; INFO; Preprocessing finished\n",
-      "2021-02-14 20:10:54,898; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
-      "2021-02-14 20:10:54,903; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-14 20:10:54,907; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-14 20:10:54,913; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-14 20:10:54,923; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-14 20:10:54,938; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-14 20:10:54,941; src.preprocessing; INFO; Preprocessing finished\n"
+      "2021-02-14 20:58:16,635; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-14 20:58:16,643; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-14 20:58:16,652; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-14 20:58:16,661; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-14 20:58:16,685; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-14 20:58:16,701; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-14 20:58:16,705; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-14 20:58:16,714; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
+      "2021-02-14 20:58:16,717; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-14 20:58:16,724; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-14 20:58:16,727; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-14 20:58:16,741; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-14 20:58:16,754; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-14 20:58:16,756; src.preprocessing; INFO; Preprocessing finished\n"
      ]
     },
     {
@@ -394,11 +394,11 @@
     "}\n",
     "\n",
     "# Preprocess the training data and get a subset of predictors\n",
-    "train_ds.clean(col_name_to_fill_method, col_name_to_encoding)\n",
+    "train_ds.do_basic_preprocessing(col_name_to_fill_method, col_name_to_encoding)\n",
     "train_df = train_ds.get_df_subset(predictors, id_col='PassengerId', ground_truth='Survived')\n",
     "\n",
     "# Preprocess the test data and get a subset of predictors\n",
-    "test_ds.clean(col_name_to_fill_method, col_name_to_encoding)\n",
+    "test_ds.do_basic_preprocessing(col_name_to_fill_method, col_name_to_encoding)\n",
     "test_df = test_ds.get_df_subset(predictors, id_col='PassengerId')\n",
     "\n",
     "# Display the training data\n",
@@ -415,14 +415,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:10:54,991; src.training; INFO; Training ``svm`` started\n",
-      "2021-02-14 20:10:55,005; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-14 20:10:55,016; src.training; INFO; Training finished\n",
-      "2021-02-14 20:10:55,029; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
-      "2021-02-14 20:10:55,032; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
-      "2021-02-14 20:10:55,041; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-14 20:10:55,047; src.training; INFO; Generating predictions on the test set\n",
-      "2021-02-14 20:10:55,067; src.training; INFO; Saved submission to ``results/submission.csv``\n"
+      "2021-02-14 20:58:16,792; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-14 20:58:16,801; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-14 20:58:16,825; src.training; INFO; Training finished\n",
+      "2021-02-14 20:58:16,841; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
+      "2021-02-14 20:58:16,847; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-14 20:58:16,852; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-14 20:58:16,854; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-14 20:58:16,869; src.training; INFO; Saved submission to ``results/submission.csv``\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "further-enterprise",
+   "id": "aggregate-economy",
    "metadata": {},
    "source": [
     "## Iteration 2\n",
@@ -458,7 +458,9 @@
    "source": [
     "## TODO: \n",
     "- Explain used model\n",
-    "- Feature Engineering"
+    "- Feature engineering\n",
+    "- Precision recall Plot\n",
+    "- Confusion matrix"
    ]
   }
  ],
