--- a/results.ipynb
+++ b/results.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:58:16,577; src.utils; INFO; Root logger is set up\n"
+      "2021-02-15 18:41:54,459; src.utils; INFO; Root logger is set up\n"
      ]
     }
    ],
@@ -59,10 +59,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:58:16,596; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
-      "2021-02-14 20:58:16,598; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
-      "2021-02-14 20:58:16,611; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
-      "2021-02-14 20:58:16,614; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
+      "2021-02-15 18:41:54,477; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-15 18:41:54,479; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
+      "2021-02-15 18:41:54,490; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-15 18:41:54,494; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
      ]
     }
    ],
@@ -105,6 +105,44 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "equipped-pharmaceutical",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-15 18:41:54,518; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-15 18:41:54,525; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-15 18:41:54,530; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-15 18:41:54,537; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-15 18:41:54,559; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-15 18:41:54,583; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-15 18:41:54,585; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-15 18:41:54,589; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Sex_female', 'Sex_male', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic preprocessing configuration\n",
+    "col_name_to_fill_method = {\n",
+    "    'Age': 'median', \n",
+    "    'Embarked': 'mode',\n",
+    "    'Fare': 'median'\n",
+    "}\n",
+    "col_name_to_encoding = {\n",
+    "    'Pclass': {1: 3, 2: 2, 3: 1}, # original_value: encoding_value\n",
+    "    'Sex': 'one_hot',\n",
+    "    'Embarked': 'one_hot'\n",
+    "}\n",
+    "\n",
+    "# Preprocess the training data and get a scaled subset of predictors\n",
+    "train_ds.do_basic_preprocessing(col_name_to_fill_method, col_name_to_encoding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "young-greenhouse",
    "metadata": {},
    "outputs": [
@@ -112,20 +150,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:58:16,635; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
-      "2021-02-14 20:58:16,643; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-14 20:58:16,652; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-14 20:58:16,661; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-14 20:58:16,685; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-14 20:58:16,701; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-14 20:58:16,705; src.preprocessing; INFO; Preprocessing finished\n",
-      "2021-02-14 20:58:16,714; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
-      "2021-02-14 20:58:16,717; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-14 20:58:16,724; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-14 20:58:16,727; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-14 20:58:16,741; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-14 20:58:16,754; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-14 20:58:16,756; src.preprocessing; INFO; Preprocessing finished\n"
+      "2021-02-15 18:41:54,616; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
+      "2021-02-15 18:41:54,620; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-15 18:41:54,629; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-15 18:41:54,634; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-15 18:41:54,651; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
+      "2021-02-15 18:41:54,666; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-15 18:41:54,669; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-15 18:41:54,670; src.preprocessing; INFO; Available columns: ['PassengerId', 'Pclass', 'Name', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Sex_female', 'Sex_male', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
      ]
     },
     {
@@ -369,7 +401,6 @@
     }
    ],
    "source": [
-    "# Basic preprocessing configuration\n",
     "predictors = [\n",
     "    'Pclass', \n",
     "    'Age', \n",
@@ -382,24 +413,11 @@
     "    'Embarked_Q', \n",
     "    'Embarked_S'\n",
     "]\n",
-    "col_name_to_fill_method = {\n",
-    "    'Age': 'median', \n",
-    "    'Embarked': 'mode',\n",
-    "    'Fare': 'median'\n",
-    "}\n",
-    "col_name_to_encoding = {\n",
-    "    'Pclass': {1: 3, 2: 2, 3: 1}, # original_value: encoding_value\n",
-    "    'Sex': 'one_hot',\n",
-    "    'Embarked': 'one_hot'\n",
-    "}\n",
-    "\n",
-    "# Preprocess the training data and get a subset of predictors\n",
-    "train_ds.do_basic_preprocessing(col_name_to_fill_method, col_name_to_encoding)\n",
-    "train_df = train_ds.get_df_subset(predictors, id_col='PassengerId', ground_truth='Survived')\n",
+    "train_df = train_ds.select(predictors, id_col='PassengerId', ground_truth='Survived')\n",
     "\n",
     "# Preprocess the test data and get a subset of predictors\n",
     "test_ds.do_basic_preprocessing(col_name_to_fill_method, col_name_to_encoding)\n",
-    "test_df = test_ds.get_df_subset(predictors, id_col='PassengerId')\n",
+    "test_df = test_ds.select(predictors, id_col='PassengerId')\n",
     "\n",
     "# Display the training data\n",
     "display(train_df)"
@@ -407,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "healthy-signal",
    "metadata": {},
    "outputs": [
@@ -415,14 +433,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-14 20:58:16,792; src.training; INFO; Training ``svm`` started\n",
-      "2021-02-14 20:58:16,801; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-14 20:58:16,825; src.training; INFO; Training finished\n",
-      "2021-02-14 20:58:16,841; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
-      "2021-02-14 20:58:16,847; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
-      "2021-02-14 20:58:16,852; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-14 20:58:16,854; src.training; INFO; Generating predictions on the test set\n",
-      "2021-02-14 20:58:16,869; src.training; INFO; Saved submission to ``results/submission.csv``\n"
+      "2021-02-15 18:41:54,716; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-15 18:41:54,725; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-15 18:41:54,744; src.training; INFO; Training finished\n",
+      "2021-02-15 18:41:54,755; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
+      "2021-02-15 18:41:54,759; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-15 18:41:54,770; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-15 18:41:54,773; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-15 18:41:54,790; src.training; INFO; Saved submission to ``results/submission.csv``\n"
      ]
     }
    ],
@@ -443,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-economy",
+   "id": "dangerous-logan",
    "metadata": {},
    "source": [
     "## Iteration 2\n",
